ci: fix catch-contents-update missing checkout

--- a/.github/workflows/catch-contents-update.yml
+++ b/.github/workflows/catch-contents-update.yml
@@ -9,6 +9,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.ACCESS_TOKEN }}
+          ref: ${{ github.head_ref }}
+          submodules: true
+
       - name: Generate Commit Message
         run: |
           original_message="${{ github.event.content_payload.message }}"
