--- a/.github/workflows/catch-contents-update.yml
+++ b/.github/workflows/catch-contents-update.yml
@@ -14,7 +14,11 @@ jobs:
         with:
           token: ${{ secrets.ACCESS_TOKEN }}
           ref: ${{ github.head_ref }}
-          submodules: true
+          submodules: recursive
+
+      - name: Update Contents
+        run: |
+          git submodule update --remote --recursive
 
       - name: Generate Commit Message
         run: |
@@ -26,5 +30,5 @@ jobs:
         with:
           branch: master
           file_pattern: contents
-          commit_user_name: ${{ github.event.content_payload.committerName }}
-          commit_user_email: ${{ github.event.content_payload.committerEmail }}
+          commit_user_name: ${{ github.event.content_payload.name }}
+          commit_user_email: ${{ github.event.content_payload.email }}
