--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -43,7 +43,12 @@ jobs:
             gatsby-
 
       - name: Install Node Modules
-        run: SHARP_IGNORE_GLOBAL_LIBVIPS=true yarn 
+        run: SHARP_IGNORE_GLOBAL_LIBVIPS=true yarn
+        
+      - name: Create DotEnv
+        uses: SpicyPizza/create-envfile@v1
+        with:
+          envkey_ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
       - name: Gatsby Build
         run: yarn build --prefix-paths
