--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.2",
   "author": "Yixuan Wang",
   "dependencies": {
+    "axios": "^0.21.1",
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-catch-links": "^2.10.0",
