--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-transformer-remark": "^2.16.0",
     "gatsby-transformer-sharp": "^2.12.0",
+    "gatsby-transformer-yaml": "^2.11.0",
     "katex": "^0.12.0",
     "normalize.css": "^8.0.1",
     "prismjs": "^1.22.0",
