--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-remark-katex": "^3.10.0",
     "gatsby-remark-prismjs": "^3.13.0",
     "gatsby-remark-responsive-iframe": "^2.11.0",
+    "gatsby-remark-ruby": "^0.1.0",
     "gatsby-remark-smartypants": "^2.10.0",
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-transformer-remark": "^2.16.0",
