--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-remark-katex": "^5.6.0",
     "gatsby-remark-prismjs": "^5.6.0",
     "gatsby-remark-responsive-iframe": "^4.6.0",
+    "gatsby-remark-shiki": "^0.2.0",
     "gatsby-remark-smartypants": "^4.6.0",
     "gatsby-source-filesystem": "^3.9.0",
     "gatsby-transformer-remark": "^4.6.0",
@@ -32,7 +33,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "sass": "^1.32.7"
+    "sass": "^1.32.7",
+    "shiki": "^0.9.5"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
