--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "contents"]
 	path = contents
-	url = git@github.com:Yixuan-Wang/blog-contents.git
+	url = https://github.com/Yixuan-Wang/blog-contents.git
