--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "unplugin-vue-components": "^0.14.5",
     "uslug": "^1.0.4",
     "vite": "^2.7.6",
+    "vite-ssg": "^0.17.5",
     "vite-plugin-md": "^0.11.7",
     "vite-plugin-package-version": "^1.0.2",
     "vite-plugin-pages": "^0.19.9",
