--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vueuse/core": "^6.0.0",
-    "@vueuse/head": "^0.6.0",
+    "@vueuse/core": "^7.5.5",
+    "@vueuse/head": "^0.7.5",
+    "@yixuan-wang/component-leipzig": "^0.0.0",
     "axios": "^0.21.3",
     "gray-matter": "^4.0.3",
     "katex": "^0.13.18",
     "lodash-es": "^4.17.21",
+    "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.4.1",
+    "markdown-it-attrs": "^4.1.3",
+    "markdown-it-bracketed-spans": "^1.0.1",
+    "markdown-it-container": "^3.0.0",
     "markdown-it-footnote": "^3.0.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.0-rc.8",
@@ -31,13 +36,15 @@
     "@intlify/vite-plugin-vue-i18n": "^2.4.0",
     "@rollup/plugin-yaml": "^3.1.0",
     "@types/lodash-es": "^4.17.5",
+    "@types/markdown-it": "^12.2.3",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/node": "^17.0.8",
     "@types/nprogress": "^0.2.0",
+    "@unocss/reset": "^0.22.6",
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.23",
     "@vue/server-renderer": "^3.2.23",
-    "critters": "^0.0.10",
+    "critters": "^0.0.16",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
@@ -46,18 +53,19 @@
     "markdown-it-shiki": "^0.3.0",
     "pnpm": "^6.24.3",
     "release-it": "^14.12.1",
+    "rollup": "^2.66.1",
     "typescript": "^4.5.2",
-    "unplugin-auto-import": "^0.2.6",
+    "unocss": "^0.22.6",
+    "unplugin-auto-import": "^0.5.11",
     "unplugin-icons": "^0.7.3",
     "unplugin-vue-components": "^0.14.5",
     "uslug": "^1.0.4",
     "vite": "^2.7.6",
-    "vite-ssg": "^0.17.5",
     "vite-plugin-md": "^0.11.7",
     "vite-plugin-package-version": "^1.0.2",
     "vite-plugin-pages": "^0.19.9",
     "vite-plugin-vue-layouts": "^0.5.0",
-    "vite-plugin-windicss": "^1.6.1",
+    "vite-ssg": "^0.17.9",
     "vue-tsc": "^0.30.0"
   }
 }
