deploy: a530128b795cda2340efc88eb0661cdf592125be

--- a/ssr-manifest.json
+++ b/ssr-manifest.json
@@ -177,11 +177,11 @@
   ],
   "contents/others/about.vue": [
     "/assets/about.3f5871e0.js",
-    "/assets/TheTaxonomy.c51787b4.css"
+    "/assets/about.214b3236.css"
   ],
   "assets/about.3f5871e0.js-unocss-hash.css": [
     "/assets/about.3f5871e0.js",
-    "/assets/TheTaxonomy.c51787b4.css"
+    "/assets/about.214b3236.css"
   ],
   "contents/others/about/about-en.md": [
     "/assets/about-en.147738a4.js",
@@ -777,11 +777,11 @@
   ],
   "src/components/TheTaxonomy.vue": [
     "/assets/TheTaxonomy.653ac535.js",
-    "/assets/TheTaxonomy.c51787b4.css"
+    "/assets/about.214b3236.css"
   ],
   "assets/TheTaxonomy.653ac535.js-unocss-hash.css": [
     "/assets/TheTaxonomy.653ac535.js",
-    "/assets/TheTaxonomy.c51787b4.css"
+    "/assets/about.214b3236.css"
   ],
   "src/pages/genre/notes.vue": [
     "/assets/notes.7827ce97.js",
