--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite --port 3333 --open",
     "build": "cross-env NODE_ENV=production vite-ssg build",
+    "local": "rm contents && rsync -rv --exclude=.git ../contents contents && pnpm run build; rm -rf contents && ln -s ../contents contents",
     "preview": "vite preview"
   },
   "dependencies": {
