style: enfore semi & double quote

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,10 @@
 {
   "extends": [
     "@antfu"
-  ]
+  ],
+  "rules": {
+    "semi": "off",
+    "@typescript-eslint/semi": ["warn", "always"],
+    "quotes": ["warn", "double"]
+  }
 }
