--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite --port 3333 --open",
     "build": "cross-env NODE_ENV=production vite-ssg build",
     "local": "rm contents && rsync -rv --exclude=.git ../contents contents && pnpm run build; rm -rf contents && ln -s ../contents contents",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src --fix"
   },
   "dependencies": {
     "@vueuse/core": "^7.5.5",
