--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "gray-matter": "^4.0.3",
     "katex": "^0.13.18",
     "lodash-es": "^4.17.21",
-    "markdown-it": "^12.3.2",
+    "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.4.1",
-    "markdown-it-attrs": "^4.1.3",
+    "markdown-it-attrs": "^4.1.4",
     "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-container": "^3.0.0",
     "markdown-it-footnote": "^3.0.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.0-rc.8",
-    "prism-theme-vars": "^0.2.2",
+    "vite-plugin-md": "^0.18.1",
     "vue": "^3.2.23",
     "vue-demi": "^0.11.3",
     "vue-i18n": "^9.1.7",
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.7.0",
-    "@iconify/json": "^1.1.395",
+    "@iconify-json/mdi": "^1.1.24",
     "@iktakahiro/markdown-it-katex": "^4.0.1",
     "@intlify/vite-plugin-vue-i18n": "^2.4.0",
     "@rollup/plugin-yaml": "^3.1.0",
@@ -42,6 +42,7 @@
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/node": "^17.0.8",
     "@types/nprogress": "^0.2.0",
+    "@unocss/preset-icons": "^0.43.1",
     "@unocss/reset": "^0.22.6",
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.23",
@@ -57,17 +58,16 @@
     "release-it": "^14.12.1",
     "rollup": "^2.66.1",
     "typescript": "^4.7.4",
-    "unocss": "^0.30.11",
+    "unocss": "^0.43.1",
     "unplugin-auto-import": "^0.5.11",
-    "unplugin-icons": "^0.7.3",
     "unplugin-vue-components": "^0.14.5",
     "uslug": "^1.0.4",
-    "vite": "^2.7.6",
-    "vite-plugin-md": "^0.11.7",
+    "vite": "2.9.0",
     "vite-plugin-package-version": "^1.0.2",
     "vite-plugin-pages": "^0.19.9",
     "vite-plugin-vue-layouts": "^0.5.0",
-    "vite-ssg": "^0.17.9",
+    "vite-plugin-vue-markdown": "^0.20.1",
+    "vite-ssg": "^0.20.2",
     "vue-tsc": "^0.30.0"
   }
 }
