--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@astrojs/svelte": "^2.0.1",
+    "@giscus/svelte": "^2.2.6",
     "@nanostores/persistent": "^0.7.0",
     "astro": "^2.0.4",
     "culori": "^2.0.4",
