--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pak",
   "type": "module",
-  "version": "4.0.0-rc.2",
+  "version": "4.0.0-rc.3",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -91,6 +91,10 @@
         }
       }
     ],
-    "ignorePatterns": ["*.yaml", "*.yml", "contents"]
+    "ignorePatterns": [
+      "*.yaml",
+      "*.yml",
+      "contents"
+    ]
   }
 }
