--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "unplugin-vue-components": "^0.14.5",
     "uslug": "^1.0.4",
     "vite": "2.9.0",
+    "vite-plugin-inspect": "^0.5.1",
     "vite-plugin-package-version": "^1.0.2",
     "vite-plugin-pages": "^0.19.9",
     "vite-plugin-vue-layouts": "^0.5.0",
