--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "culori": "^2.0.4",
     "date-fns": "^2.29.3",
     "fp-ts": "^2.13.1",
+    "hast-util-to-text": "^3.1.2",
     "nanostores": "^0.7.1",
     "svelte": "^3.55.1"
   },
