ci: fix pnpm cache miss

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -29,6 +29,14 @@ jobs:
           ref: v4
           path: contents
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Setup `pnpm`
+        run: npm i -g pnpm
+
       - name: Cache `pnpm` Modules
         uses: actions/cache@v3
         with:
@@ -37,17 +45,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: pnpm
-
-      - name: Setup `pnpm`
-        run: npm i -g pnpm
-
       - name: Install Node Packages
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       - name: Build
         env:
