--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.27.0",
     "@iconify-json/mdi": "^1.1.50",
+    "@notionhq/client": "^2.2.5",
     "@rollup/plugin-yaml": "^4.0.1",
     "@types/node": "^18.11.18",
     "@typescript-eslint/parser": "^5.48.1",
@@ -41,6 +42,7 @@
     "fast-glob": "^3.2.12",
     "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
+    "notion-to-md": "^3.0.1",
     "ora": "^6.1.2",
     "rehype-katex": "^6.0.2",
     "rehype-parse": "^8.0.4",
