--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -53,7 +53,7 @@ jobs:
           PUBLIC_BUILD_SITE_URL: "https://blog.yixuan-wang.site"
           PUBLIC_BUILD_BASE_URL: "/"
           PUBLIC_BUILT_BY: "ci"
-          CONTENTS_DIR: "contents"
+          POSTS_DIR: "data/posts"
           GITHUB_USER: "Yixuan-Wang"
           GITHUB_REPO: "blog-contents"
           GITHUB_ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
