--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@giscus/svelte": "^2.2.6",
     "@nanostores/persistent": "^0.7.0",
     "astro": "^3.0.12",
+    "astro-pagefind": "^1.3.0",
     "culori": "^2.0.4",
     "date-fns": "^2.29.3",
     "fp-ts": "^2.13.1",
