--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "culori": "^2.0.4",
     "date-fns": "^2.29.3",
     "fp-ts": "^2.13.1",
+    "hast-util-from-html": "^2.0.1",
+    "hast-util-to-html": "^9.0.0",
     "hast-util-to-text": "^3.1.2",
     "nanostores": "^0.7.1",
     "svelte": "^3.55.1"
