--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,6 +27,9 @@ env:
   GITHUB_REPO: "blog-contents" # GitHub content provider (repo)
   GITHUB_ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} # GitHub content provider (access token)
 
+  # build outputs
+  BUILD_OUTPUT_DIR_MAIN: "dist" # Build output directory for main site
+
 jobs:
   prepare:
     runs-on: ubuntu-latest
@@ -69,23 +72,35 @@ jobs:
       - name: Install Node Packages
         run: pnpm install
 
+      - name: Build
+        env:
+          PUBLIC_BUILD_SITE_URL: "https://blog.yixuan-wang.site"
+          PUBLIC_BUILD_BASE_URL: "/"
+        run: pnpm run build -- --outDir=${{ env.BUILD_OUTPUT_DIR_MAIN }}
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: blog-build-main
+          path: ./${{ env.BUILD_OUTPUT_DIR_MAIN }}
+
   # deploy:
   #   runs-on: ubuntu-latest
   #   needs: prepare
   #   env:
   #     BUILD_OUTPUT_DIR: "dist"
   #   steps:
-  #     - name: Build
-  #       env:
-  #         PUBLIC_BUILD_SITE_URL: "https://blog.yixuan-wang.site"
-  #         PUBLIC_BUILD_BASE_URL: "/"
-  #       run: pnpm run build -- --outDir=${{ env.BUILD_OUTPUT_DIR }}
-
+  #     - name: Donwload Artifact
+  #           uses: actions/download-artifact@v3
+  #           with:
+  #             name: blog-build-main
+  #             path: ./${{ env.BUILD_OUTPUT_DIR_MAIN }}
+  #
   #     - name: Deploy Server
   #       uses: burnett01/rsync-deployments@5.2.1
   #       with:
   #         switches: -avzr --delete
-  #         path: ${{ env.BUILD_OUTPUT_DIR }}/.
+  #         path: ${{ env.BUILD_OUTPUT_DIR_MAIN }}/.
   #         remote_path: ${{ secrets.MIRROR_TARGET }}
   #         remote_host: ${{ secrets.MIRROR_HOST }}
   #         remote_user: github
@@ -94,22 +109,19 @@ jobs:
   deploy-gh-pages:
     runs-on: ubuntu-latest
     needs: prepare
-    env:
-      BUILD_OUTPUT_DIR: "dist"
     permissions:
       pages: write
       id-token: write
 
     steps:
-      - name: Build
-        env:
-          PUBLIC_BUILD_SITE_URL: "https://blog.yixuan-wang.site"
-          PUBLIC_BUILD_BASE_URL: "/"
-        run: pnpm run build -- --outDir=${{ env.BUILD_OUTPUT_DIR }}
-
+      - name: Download Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: blog-build-main
+          path: ./public
+  
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./${{ env.BUILD_OUTPUT_DIR }}
           cname: blog.yixuan-wang.site
