--- a/package.json
+++ b/package.json
@@ -13,57 +13,58 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@astrojs/svelte": "^4.0.2",
-    "@giscus/svelte": "^2.2.6",
+    "@astrojs/svelte": "^5.0.1",
+    "@giscus/svelte": "^2.3.0",
     "@nanostores/persistent": "^0.7.0",
-    "astro": "^3.0.12",
+    "astro": "^4.0.6",
     "astro-pagefind": "^1.3.0",
-    "culori": "^2.0.4",
-    "date-fns": "^2.29.3",
-    "fp-ts": "^2.13.1",
+    "culori": "^2.1.1",
+    "date-fns": "^2.30.0",
+    "fp-ts": "^2.16.1",
     "hast-util-from-html": "^2.0.1",
     "hast-util-to-html": "^9.0.0",
-    "hast-util-to-text": "^3.1.2",
-    "nanostores": "^0.7.1",
-    "svelte": "^3.55.1"
+    "hast-util-to-text": "^4.0.0",
+    "nanostores": "^0.7.4",
+    "svelte": "^4.2.8"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.27.0",
-    "@iconify-json/mdi": "^1.1.50",
-    "@notionhq/client": "^2.2.5",
-    "@rollup/plugin-yaml": "^4.0.1",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/parser": "^5.48.1",
-    "@unocss/preset-web-fonts": "^0.50.8",
-    "@unocss/reset": "^0.50.8",
-    "@unocss/transformer-directives": "^0.50.8",
-    "@unocss/transformer-variant-group": "^0.50.8",
-    "chalk": "^5.2.0",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.32.0",
+    "@iconify-json/mdi": "^1.1.63",
+    "@notionhq/client": "^2.2.14",
+    "@rollup/plugin-yaml": "^4.1.2",
+    "@types/node": "^18.19.3",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@unocss/preset-web-fonts": "^0.58.0",
+    "@unocss/reset": "^0.58.0",
+    "@unocss/transformer-directives": "^0.58.0",
+    "@unocss/transformer-variant-group": "^0.58.0",
+    "chalk": "^5.3.0",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.56.0",
     "eslint-plugin-astro": "^0.19.0",
-    "fast-glob": "^3.2.12",
+    "fast-glob": "^3.3.2",
     "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
-    "notion-to-md": "^3.0.1",
-    "ora": "^6.1.2",
-    "rehype-katex": "^6.0.2",
-    "rehype-parse": "^8.0.4",
-    "rehype-raw": "^6.1.1",
-    "rehype-slug": "^5.1.0",
-    "rehype-stringify": "^9.0.3",
-    "remark-directive": "^2.0.1",
-    "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1",
-    "remark-rehype": "^10.1.0",
-    "rxjs": "^7.8.0",
-    "shiki": "^0.14.0",
-    "unified": "^10.1.2",
-    "unionfs": "^4.4.0",
-    "unist-util-map": "^3.1.3",
-    "unist-util-visit": "^4.1.2",
-    "unocss": "^0.52.4",
-    "vite-plugin-inspect": "^0.7.15"
+    "notion-to-md": "^3.1.1",
+    "ora": "^6.3.1",
+    "rehype-katex": "^7.0.0",
+    "rehype-parse": "^9.0.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-directive": "^3.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.0.0",
+    "rxjs": "^7.8.1",
+    "shiki": "^0.14.7",
+    "unified": "^11.0.4",
+    "unionfs": "^4.5.1",
+    "unist-util-map": "^4.0.0",
+    "unist-util-visit": "^5.0.0",
+    "unocss": "^0.58.0",
+    "vite-plugin-inspect": "^0.8.1"
   },
   "eslintConfig": {
     "extends": [
