--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pak",
   "type": "module",
-  "version": "4.3.0-0",
+  "version": "4.3.0",
   "private": true,
   "scripts": {
     "dev": "astro dev",
