feat: bump shiki and theme

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@iconify-json/mdi": "^1.1.63",
     "@notionhq/client": "^2.2.14",
     "@rollup/plugin-yaml": "^4.1.2",
+    "@shikijs/rehype": "^1.1.7",
     "@types/node": "^18.19.3",
     "@typescript-eslint/parser": "^5.62.0",
     "@unocss/reset": "^0.58.0",
@@ -57,7 +58,7 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.0.0",
     "rxjs": "^7.8.1",
-    "shiki": "^0.14.7",
+    "shiki": "^1.1.7",
     "unified": "^11.0.4",
     "unionfs": "^4.5.1",
     "unist-util-map": "^4.0.0",
