ci: migrate to cloudflare/wrangler-action

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -79,14 +79,13 @@ jobs:
         run: pnpm run build -- --outDir=${{ env.BUILD_OUTPUT_DIR_MAIN }}
 
       - name: Upload Pages Artifact
-        uses: actions/upload-pages-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./${{ env.BUILD_OUTPUT_DIR_MAIN }}
 
       - name: Publish to Cloudflare Pages
-        uses: cloudflare/pages-action@v1
+        uses: cloudflare/wrangler-action@v3 
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: blog
-          directory: ${{ env.BUILD_OUTPUT_DIR_MAIN }}
+          command: pages deploy ${{ env.BUILD_OUTPUT_DIR_MAIN }} --project-name=blog
