--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "@shikijs/rehype": "^1.15.1",
     "@types/node": "^18.19.3",
     "@typescript-eslint/parser": "^5.62.0",
-    "@unocss/reset": "^0.58.0",
-    "@unocss/transformer-directives": "^0.58.0",
-    "@unocss/transformer-variant-group": "^0.58.0",
+    "@unocss/preset-web-fonts": "^66.0.0",
+    "@unocss/reset": "^66.0.0",
+    "@unocss/transformer-directives": "^66.0.0",
+    "@unocss/transformer-variant-group": "^66.0.0",
     "chalk": "^5.3.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
@@ -63,7 +64,7 @@
     "unionfs": "^4.5.1",
     "unist-util-map": "^4.0.0",
     "unist-util-visit": "^5.0.0",
-    "unocss": "^0.58.0",
+    "unocss": "^66.0.0",
     "vite-plugin-inspect": "^0.8.1"
   },
   "eslintConfig": {
