perf: inline CSS

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/svelte": "^7.0.4",
     "@giscus/svelte": "^3.1.0",
     "@nanostores/persistent": "^0.7.0",
+    "@playform/inline": "^0.1.1",
     "astro": "^5.3.0",
     "astro-pagefind": "^1.8.0",
     "date-fns": "^2.30.0",
