--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "dependencies": {
     "@astrojs/svelte": "^7.0.4",
+    "@fontsource-variable/inter": "^5.2.5",
+    "@fontsource-variable/jetbrains-mono": "^5.2.5",
+    "@fontsource-variable/source-serif-4": "^5.2.6",
+    "@fontsource/noto-color-emoji": "^5.2.6",
     "@giscus/svelte": "^3.1.0",
     "@nanostores/persistent": "^0.7.0",
     "@playform/inline": "^0.1.1",
