--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pak",
   "type": "module",
-  "version": "4.6.5",
+  "version": "4.6.5-post.1",
   "private": true,
   "scripts": {
     "dev": "astro dev",
