--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "astro-pagefind": "^1.8.0",
     "date-fns": "^2.30.0",
     "fp-ts": "^2.16.1",
+    "leaflet": "^1.9.4",
     "nanostores": "^0.7.4",
     "svelte": "^5.20.2"
   },
@@ -30,6 +31,7 @@
     "@notionhq/client": "^2.2.14",
     "@rollup/plugin-yaml": "^4.1.2",
     "@shikijs/rehype": "^1.15.1",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^18.19.3",
     "@typescript-eslint/parser": "^5.62.0",
     "@unocss/reset": "^66.0.0",
